add gitignore file

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,6 @@
 PORT=8000
 NODE_ENV=development
-MONGO_URI="mongodb+srv://belhajjamorsamar:Won2IH4WlgAaDUfA@cluster0.izzvj.mongodb.net/"
+MONGO_URI="mongodb+srv://belhajjamorsamar:IEOw8O0V2TQhSHwg@cluster0.xw3syrf.mongodb.net/"
 
 SESSION_SECRET="session-secret-key"
 SESSION_EXPIRES_IN="1d"
